<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"

    >

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/enter_ip_adress"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bloc_text_btn"
            android:gravity="start"
        >

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:inputType="text"
                android:hint="@string/ip_adress_placeholder"

                android:ems="10"
                android:id="@+id/input_ip_adress"
                android:autofillHints="Server IP Adress"
                tools:ignore="LabelFor"
                />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_toEndOf="@id/input_ip_adress"
                android:inputType="number"
                android:hint="@string/port"
                android:text="@string/default_port"
                android:ems="10"
                android:id="@+id/input_port"
                android:autofillHints="Server IP Adress"
                tools:ignore="LabelFor"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_ok"
                android:layout_marginStart="50dp"
                android:layout_centerInParent="true"
                android:layout_below="@id/input_ip_adress"
                android:text="OK"
                style="@style/Widget.AppCompat.Button"
                android:layout_centerHorizontal="true" />



    </RelativeLayout>

</LinearLayout>