<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">



    <LinearLayout
            android:id="@+id/welcome_bloc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
        <TextView
                android:id="@+id/welcome_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_margin="10dp"

             />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/github"
                android:textSize="20sp"
                android:textAlignment="center"
                android:autoLink="web"
                android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_btn"
            android:layout_below="@+id/welcome_bloc"
            android:layout_marginTop="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="100dp"
            android:layout_centerInParent="true" />

</RelativeLayout>